--- a/css/main.css
+++ b/css/main.css
@@ -1142,10 +1142,10 @@ a.has-text-danger:hover, a.has-text-danger:focus {
   position: relative !important; }
 
 .box {
-  background-color: white;
-  border-radius: 6px;
-  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-  color: #4a4a4a;
+  background-color: #f4f6fa;
+  border-radius: 2px;
+  box-shadow: 0 0.5em 1em -0.125em #0000001a, 0 0px 0 1px #54545426;
+  color: #727282;
   display: block;
   padding: 1.25rem; }
 
@@ -7114,6 +7114,246 @@ label.panel-block {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
 
+.m-none {
+  margin: 0; }
+
+.p-none {
+  padding: 0; }
+
+.m-t-none {
+  margin-top: 0; }
+
+.p-t-none {
+  padding-top: 0; }
+
+.m-r-none {
+  margin-right: 0; }
+
+.p-r-none {
+  padding-right: 0; }
+
+.m-b-none {
+  margin-bottom: 0; }
+
+.p-b-none {
+  padding-bottom: 0; }
+
+.m-l-none {
+  margin-left: 0; }
+
+.p-l-none {
+  padding-left: 0; }
+
+.m-xxs {
+  margin: 0.125rem; }
+
+.p-xxs {
+  padding: 0.125rem; }
+
+.m-t-xxs {
+  margin-top: 0.125rem; }
+
+.p-t-xxs {
+  padding-top: 0.125rem; }
+
+.m-r-xxs {
+  margin-right: 0.125rem; }
+
+.p-r-xxs {
+  padding-right: 0.125rem; }
+
+.m-b-xxs {
+  margin-bottom: 0.125rem; }
+
+.p-b-xxs {
+  padding-bottom: 0.125rem; }
+
+.m-l-xxs {
+  margin-left: 0.125rem; }
+
+.p-l-xxs {
+  padding-left: 0.125rem; }
+
+.m-xs {
+  margin: 0.25rem; }
+
+.p-xs {
+  padding: 0.25rem; }
+
+.m-t-xs {
+  margin-top: 0.25rem; }
+
+.p-t-xs {
+  padding-top: 0.25rem; }
+
+.m-r-xs {
+  margin-right: 0.25rem; }
+
+.p-r-xs {
+  padding-right: 0.25rem; }
+
+.m-b-xs {
+  margin-bottom: 0.25rem; }
+
+.p-b-xs {
+  padding-bottom: 0.25rem; }
+
+.m-l-xs {
+  margin-left: 0.25rem; }
+
+.p-l-xs {
+  padding-left: 0.25rem; }
+
+.m-sm {
+  margin: 0.5rem; }
+
+.p-sm {
+  padding: 0.5rem; }
+
+.m-t-sm {
+  margin-top: 0.5rem; }
+
+.p-t-sm {
+  padding-top: 0.5rem; }
+
+.m-r-sm {
+  margin-right: 0.5rem; }
+
+.p-r-sm {
+  padding-right: 0.5rem; }
+
+.m-b-sm {
+  margin-bottom: 0.5rem; }
+
+.p-b-sm {
+  padding-bottom: 0.5rem; }
+
+.m-l-sm {
+  margin-left: 0.5rem; }
+
+.p-l-sm {
+  padding-left: 0.5rem; }
+
+.m-md {
+  margin: 1rem; }
+
+.p-md {
+  padding: 1rem; }
+
+.m-t-md {
+  margin-top: 1rem; }
+
+.p-t-md {
+  padding-top: 1rem; }
+
+.m-r-md {
+  margin-right: 1rem; }
+
+.p-r-md {
+  padding-right: 1rem; }
+
+.m-b-md {
+  margin-bottom: 1rem; }
+
+.p-b-md {
+  padding-bottom: 1rem; }
+
+.m-l-md {
+  margin-left: 1rem; }
+
+.p-l-md {
+  padding-left: 1rem; }
+
+.m-lg {
+  margin: 2rem; }
+
+.p-lg {
+  padding: 2rem; }
+
+.m-t-lg {
+  margin-top: 2rem; }
+
+.p-t-lg {
+  padding-top: 2rem; }
+
+.m-r-lg {
+  margin-right: 2rem; }
+
+.p-r-lg {
+  padding-right: 2rem; }
+
+.m-b-lg {
+  margin-bottom: 2rem; }
+
+.p-b-lg {
+  padding-bottom: 2rem; }
+
+.m-l-lg {
+  margin-left: 2rem; }
+
+.p-l-lg {
+  padding-left: 2rem; }
+
+.m-xl {
+  margin: 4rem; }
+
+.p-xl {
+  padding: 4rem; }
+
+.m-t-xl {
+  margin-top: 4rem; }
+
+.p-t-xl {
+  padding-top: 4rem; }
+
+.m-r-xl {
+  margin-right: 4rem; }
+
+.p-r-xl {
+  padding-right: 4rem; }
+
+.m-b-xl {
+  margin-bottom: 4rem; }
+
+.p-b-xl {
+  padding-bottom: 4rem; }
+
+.m-l-xl {
+  margin-left: 4rem; }
+
+.p-l-xl {
+  padding-left: 4rem; }
+
+.m-xxl {
+  margin: 8rem; }
+
+.p-xxl {
+  padding: 8rem; }
+
+.m-t-xxl {
+  margin-top: 8rem; }
+
+.p-t-xxl {
+  padding-top: 8rem; }
+
+.m-r-xxl {
+  margin-right: 8rem; }
+
+.p-r-xxl {
+  padding-right: 8rem; }
+
+.m-b-xxl {
+  margin-bottom: 8rem; }
+
+.p-b-xxl {
+  padding-bottom: 8rem; }
+
+.m-l-xxl {
+  margin-left: 8rem; }
+
+.p-l-xxl {
+  padding-left: 8rem; }
+
 body {
   font-size: 1em;
   font-family: 'Varela Round', sans-serif; }
@@ -7125,7 +7365,7 @@ h4,
 h5,
 h6 {
   line-height: normal;
-  margin-bottom: 8px;
+  margin: 8px 0;
   color: #35a4e8; }
 
 h1 {
@@ -7153,3 +7393,34 @@ h4 {
 
 .grey {
   color: #949494; }
+
+p {
+  font-size: 1.5em;
+  margin: 4px 0 8px 0; }
+
+.button {
+  font-family: 'Varela Round', sans-serif;
+  transition: all 0.4s ease 0s; }
+
+.button.is-primary:hover, .button.is-primary.is-hovered {
+  background-color: #81decd;
+  border-color: transparent;
+  color: #000; }
+
+.box {
+  border: 1px solid #6f6f6f; }
+  .box p {
+    font-size: 1rem;
+    text-align: initial; }
+  .box ul {
+    text-align: initial;
+    list-style: inside; }
+  .box .icon {
+    font-size: 2.5em;
+    color: #808080; }
+  .box .bold {
+    color: #2f2f31;
+    font-weight: 600; }
+
+.my-story p {
+  text-align: initial; }
